[tool.poetry]
name = "MLOPS_Template"
version = "0.1.0"
description = ""
authors = ["wolffy-au <wolffborg1@gmail.com>"]
license = "GPL-3"
readme = "README.md"
homepage = "https://github.com/wolffy-au/MLOPS_Template/"
repository = "https://github.com/wolffy-au/MLOPS_Template"
packages = [
    { include = "uctemplate" },
    { include = "ucmltutorial" },
#    { include = "libmlops" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
libmlops = { git = "http://10.61.1.15:3000/wolffy-au/libmlops.git", branch = "main" }
#libmlops = { git = "http://10.61.1.15:3000/wolffy-au/libmlops.git", tag = "v0.1.0" }

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27"
pyright = "^1.1"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
# Optional: Specify the Python version for Pyright to use
pythonVersion = "3.9"

# Optional: Specify additional search paths for modules
# This is useful if your project has a non-standard structure
# For example, if your source code is in the 'src' directory:
searchPaths = ["src"]
